# MapsetVerifier

./: .gitignore  .prettierignore  Directory.Build.targets  MapsetVerifier.sln  Ninajirachi - Infohazard (GRR SNARL GROWL) [test].osu  README.md  build-sidecars.bat  build-sidecars.sh  buried  global.json  lint-staged.config.js  local-dist.bat  local-start.bat  make-local-dist.bat  package-lock.json  package.json  prettier.config.cjs
.run/: Build Sidecars on Windows.run.xml  Build Sidecars.run.xml  Start App.run.xml  Start Backend.run.xml  Start Local.run.xml
MapsetVerifier.Checks/: Common.cs  MapsetVerifier.Checks.csproj
MapsetVerifier.Checks.Tests/: CheckClassNameUniquenessTests.cs  CheckTestContext.cs  InterpretedDifficultyOverrideTests.cs  MapsetVerifier.Checks.Tests.csproj
MapsetVerifier.Exports/: MapsetVerifier.Exports.csproj  Program.cs
MapsetVerifier.Framework/: CheckProgress.cs  CheckProgressTracker.cs  Checker.cs  CheckerRegistry.cs  MapsetVerifier.Framework.csproj
MapsetVerifier.Logging/: LoggerConfigurator.cs  MapsetVerifier.Logging.csproj  ShortSourceContextEnricher.cs
MapsetVerifier.Parser/: MapsetVerifier.Parser.csproj  Track.cs  TrimmerRoots.xml
MapsetVerifier.Parser.Tests/: MapsetVerifier.Parser.Tests.csproj  SkinStaticTests.cs
MapsetVerifier.Rendering/: BeatmapInfoRenderer.cs  ChecksRenderer.cs  DocumentationRenderer.cs  ExceptionRenderer.cs  MapsetVerifier.Rendering.csproj  OverlayRenderer.cs  (+5 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
(+959 files in other folders)
